--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -7,6 +7,7 @@
 					<content>
 						<HBox>
 						<VBox>
+							<Button text="Go to xsdata view" press="onxs"/>
 							<Label id="Label" text="Input ID"/>
 							<Input id="idInput" required="true" width="200px"/>
 							<Button text="AJAX call" press="Read"/>
